Pie charts and chart-fragment for programs

--- a/res/layout/groupped_data_list.xml
+++ b/res/layout/groupped_data_list.xml
@@ -1,8 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/datalistItemHeight">
+    android:layout_height="wrap_content">
 
-    <TextView
+   <TextView
         android:id="@+id/event_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -11,38 +11,27 @@
         android:ellipsize="marquee"
         android:singleLine="true"
         android:textStyle="bold"
-		android:textSize="@dimen/datalistTextSizeLarge"/>        
+        android:textColor="@color/White"
+        android:textSize="@dimen/datalistTextSizeSmall"/>
 
-   <TextView
+      <TextView
         android:id="@+id/event_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:ellipsize="marquee"
+        android:singleLine="true"
+        android:textColor="@color/White"
+        android:textSize="@dimen/datalistTextSizeSmall"/>
+   
+    <TextView
+        android:id="@+id/viewers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:paddingRight="@dimen/datalistTextPadding"
         android:ellipsize="marquee"
         android:singleLine="true"
-        android:textStyle="bold"
-        android:textSize="@dimen/datalistTextSizeLarge"/>
-    
-    <TextView
-        android:id="@+id/viewers"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:paddingLeft="@dimen/datalistTextPadding"        
-        android:ellipsize="marquee"
-        android:singleLine="true"
-        android:textSize="@dimen/datalistTextSizeSmall" />
-
-    <TextView
-        android:id="@+id/duration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:paddingRight="@dimen/datalistTextPadding"        
-        android:ellipsize="marquee"
-        android:singleLine="true"
+        android:textColor="@color/White"
         android:textSize="@dimen/datalistTextSizeSmall" />
 </RelativeLayout> 
