--- a/res/layout-port/chartview.xml
+++ b/res/layout-port/chartview.xml
@@ -19,6 +19,7 @@
     	android:layout_width="match_parent"
     	android:paddingTop="@dimen/datalistPaddingTop"
     	android:paddingBottom="@dimen/datalistPaddingBottom"
-    	android:layout_height="@dimen/datalistHeight"/>
+    	android:layout_height="@dimen/datalistHeight"
+    	android:background="@color/Black" />
 	
 </LinearLayout>
