--- a/res/layout-land/chartview.xml
+++ b/res/layout-land/chartview.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/chartview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:baselineAligned="false"
     android:background="@color/Black"
     android:dividerPadding="20dp"
     android:orientation="horizontal">    
     
+	<LinearLayout
+	    android:id="@+id/chartview"
+	    android:layout_height="match_parent"
+	    android:layout_width="0dip"
+	    android:layout_marginLeft="20dp"
+	    android:layout_marginTop="20dp"
+	    android:layout_gravity="top"
+	    android:orientation="vertical"
+	    android:background="@color/Black"
+	    android:layout_weight="1" />
+	
 </LinearLayout>
