--- a/res/layout-port/chartview.xml
+++ b/res/layout-port/chartview.xml
@@ -2,12 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/Black"
     android:dividerPadding="20dp"
     android:orientation="vertical">    
     
 	<LinearLayout
 	    android:id="@+id/chartview"
 	    android:layout_width="match_parent"
+	    android:layout_marginLeft="20dp"
+	    android:layout_marginTop="20dp"
 	    android:layout_height="0dp"
 	    android:layout_gravity="top"
 	    android:orientation="vertical"
