--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -20,11 +20,11 @@
     <style name="DialogAnimation">
         <item name="android:windowEnterAnimation">@anim/slide_down_dialog</item>
         <item name="android:windowExitAnimation">@anim/slide_out_up</item>
-		<item name="android:windowBackground">@null</item> 
 		<item name="android:windowFrame">@null</item> 
 		<item name="android:gravity">bottom</item>
-		<item name="android:background">@color/Gray</item>
-	</style>
+<!-- 		<item name="android:windowBackground">@null</item> -->
+    	<item name="android:colorBackground">@color/DarkSlateGray</item>	
+    </style>
 	
     <!-- Animation for dialog box -->
     <style name="DialogSlideAnim" parent="@android:style/Theme.Dialog">
