--- a/res/layout-land/chartview.xml
+++ b/res/layout-land/chartview.xml
@@ -13,6 +13,7 @@
 	    android:layout_width="0dip"
 	    android:layout_marginLeft="20dp"
 	    android:layout_marginTop="20dp"
+	    android:layout_marginBottom="20dp"
 	    android:layout_gravity="top"
 	    android:orientation="vertical"
 	    android:background="@color/DarkSlateGray"
