--- a/res/drawable-mdpi/simple_border.xml
+++ b/res/drawable-mdpi/simple_border.xml
@@ -1,7 +1,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/DarkSlateGray" />
+            <solid android:color="@color/SlateGray" />
         </shape>
     </item>
 
