--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/DarkSlateGray"
+    android:background="@color/SlateGray"
     tools:context=".MainActivity" >
 
     <android.support.v4.view.ViewPager
