--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
+        android:alpha="0.7"
         android:dividerHeight="0dp"
         android:background="#111"/>
 </android.support.v4.widget.DrawerLayout>
