--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -19,7 +19,7 @@
 
     <style name="DialogAnimation">
         <item name="android:windowEnterAnimation">@anim/slide_down_dialog</item>
-        <item name="android:windowExitAnimation">@anim/slide_out_up</item>
+        <item name="android:windowExitAnimation">@anim/slide_out_up_dialog</item>
 		<item name="android:windowFrame">@null</item> 
 		<item name="android:gravity">bottom</item>
 <!-- 		<item name="android:windowBackground">@null</item> -->
