Help texts + more color contrasts in charts

--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -13,15 +13,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="6dip" >
+	        android:paddingTop="30dip"
+	        android:paddingLeft="20dip"
+	        android:paddingRight="20dip">
 
             <TextView
                 android:id="@+id/help_page_intro"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:padding="2dip"
-                android:text="@string/help_page_intro" />
+                android:padding="2dip" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -42,11 +43,11 @@
                     android:contentDescription="@string/barchart_help_title" />
 
                 <TextView
+                    android:id="@+id/barchart_help_intro"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/help_chart_btn"
-                    android:padding="8dip"
-                    android:text="@string/barchart_help_intro" />
+                    android:padding="8dip" />
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -67,11 +68,11 @@
                     android:contentDescription="@string/piechart_help_title" />
 
                 <TextView
+                    android:id="@+id/piechart_help_intro"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/help_pie_btn"
-                    android:padding="8dip"
-                    android:text="@string/piechart_help_intro" />
+                    android:padding="8dip" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -84,20 +85,20 @@
                 android:paddingTop="20dip">
 
                 <ImageButton
-                    android:id="@+id/help_chartsettings_btn"
+                    android:id="@+id/help_settings_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:src="@drawable/ic_settings"
                     android:background="@android:drawable/list_selector_background"
-                    android:contentDescription="@string/chartsettings_help_title" />
+                    android:contentDescription="@string/settings_help_title" />
 
                 <TextView
+                    android:id="@+id/settings_help_intro"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/help_chartsettings_btn"
-                    android:padding="8dip"
-                    android:text="@string/chartsettings_help_intro" />
+                    android:layout_toRightOf="@id/help_settings_btn"
+                    android:padding="8dip"/>
             </RelativeLayout>
             
         </LinearLayout>
