--- a/res/layout/help_topic.xml
+++ b/res/layout/help_topic.xml
@@ -8,6 +8,9 @@
     <TextView
         android:id="@+id/topic_help_textview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:paddingTop="30dip"
+        android:paddingLeft="20dip"
+        android:paddingRight="20dip"/>
 
 </LinearLayout>
